# push-notification-service

./: .dockerignore  .env  Cargo.toml  Dockerfile  README.md  docker-compose.yml
doc/: requirements.md
migrations/2020-04-01-212445_user/: down.sql  up.sql
src/: endpoints.rs  lib.rs  main.rs
src/db/: models.rs  schema.rs
src/messaging/: client.rs  fcm_helper.rs  firebase.rs  mod.rs
src/service/: jwe_helper.rs  jwt_helper.rs  mod.rs  models.rs
