[package]
name = "pushy"
version = "0.1.0"
authors = ["Florian <7901907+mrRo8o7@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
kafka = "0.8.0"
fcm = "0.7.1"
