[package]
name = "pushy"
version = "0.1.0"
authors = ["Florian <7901907+mrRo8o7@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.4", features = ["postgres"] }
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
kafka = "0.8.0"
fcm = "0.7.1"
log = "0.4.8"
env_logger = "0.7.1"
futures = { version = "0.3.4", features = ["thread-pool"] }
ctrlc = "3.1.4"
jsonwebtoken = "7.1.0"
serde = "1.0.106"
serde_json = "1.0.51"
async-trait = "0.1.30"